--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,10 +36,10 @@
             android:id="@+id/next_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingVertical="10dp"
-            android:paddingHorizontal="25dp"
             android:background="@drawable/btn_next_background"
-            android:fontFamily="sans-serif"
+            android:fontFamily="casual"
+            android:paddingHorizontal="25dp"
+            android:paddingVertical="10dp"
             android:text="@string/next"
             android:textAllCaps="false"
             android:textColor="@color/black"
